--- a/5-teknik-scatter-hitam-rahasia-dari-admin-pusat-oyo777.html
+++ b/5-teknik-scatter-hitam-rahasia-dari-admin-pusat-oyo777.html
@@ -211,8 +211,8 @@
             </div>
           </div>
           <div class='button-wrapper'>
-            <a href='https://t.ly/alt-oyo777' rel = "nofollow" class='btn-secondary'>OYO777</a>
-            <a href='https://medanlink.com/IlW6QFxF0jti' rel = "nofollow" class='btn-primary'>OYO777</a>
+            <a href='https://t.ly/alt-oyo777' rel = "nofollow" class='btn-secondary'>DAFTAR</a>
+            <a href='https://t.ly/alt-oyo777' rel = "nofollow" class='btn-primary'>LOGIN</a>
           </div>
         </div>
       <br>
@@ -234,7 +234,7 @@
           <a href="https://t.ly/alt-oyo777" rel="nofollow noreferrer" target="_blank">OYO777</a>
         </div>
         <div class="btn-items">
-          <a href="https://medanlink.com/IlW6QFxF0jti" rel="nofollow noreferrer" target="_blank">OYO777</a>
+          <a href="https://t.ly/alt-oyo777" rel="nofollow noreferrer" target="_blank">OYO777</a>
         </div>
       </div>
     </section>
